--- a/templates/newplaylist.html
+++ b/templates/newplaylist.html
@@ -19,10 +19,14 @@
     <div class='col-md-6 col-md-offset-3 text-center'>
         <h1>Add New Playlist</h1>
         <form method='post'>
-            <input type='text' size='30' name='playlist_name' placeholder="Playlist name">
+            <input type='text' size='30'
+                    name='playlist_name'
+                    placeholder="Playlist name">
             <br>
             <br>
-            <textarea class='description-text' name="playlist_description" placeholder='Playlist description'></textarea>
+            <textarea class='description-text'
+                        name="playlist_description"
+                        placeholder='Playlist description'></textarea>
             <br>
             <input class='create-button' type='submit' value='Create'>
         </form>
