--- a/templates/base.html
+++ b/templates/base.html
@@ -47,9 +47,17 @@
                     <a class='log' id='login' href="{{url_for('showLogin')}}">Log In</a>
                     {% else %}
                     <ul class="navbar-nav navbar-right">
-                        <li><img id='user-image' src="{{session.picture}}" height="40" width="40"></li>
-                        <li id='username'>{{session.username}}</li>
-                        <li id="logout"><a id='logout-a' href="{{url_for('disconnect')}}">Log Out</a></li>
+                        <li><img id='user-image' src="{{session.picture}}"
+                            height="40" width="40">
+                        </li>
+                        <li id='username'>
+                            {{session.username}}
+                        </li>
+                        <li id="logout">
+                            <a id='logout-a' href="{{url_for('disconnect')}}">
+                                Log Out
+                            </a>
+                        </li>
                     </ul>
 
                     {% endif %}
