--- a/templates/deleteplaylist.html
+++ b/templates/deleteplaylist.html
@@ -9,11 +9,14 @@
     <h4 class='warning'>This cannot be undone</h4>
     <div class='row'>
         <div class='col-md-offset-4 col-md-1'>
-            <a href="{{url_for('showSongs', playlist_id = playlist.id)}}">Cancel</a>
+            <a href="{{url_for('showSongs', playlist_id = playlist.id)}}">
+                Cancel
+            </a>
         </div>
         <div class='col-md-1 col-md-offset-2'>
             <form method='post'>
-                <input class='warning' type='submit' name='delete_playlist' value='Delete'>
+                <input class='warning' type='submit' name='delete_playlist'
+                    value='Delete'>
             </form>
         </div>
     </div>
