--- a/templates/editplaylist.html
+++ b/templates/editplaylist.html
@@ -15,10 +15,13 @@
     <br>
     <h1>Edit Playlist</h1>
     <form method='post'>
-        <input type='text' size='30' name='edit_playlist_name' value="{{playlist.name}}">
+        <input type='text' size='30' name='edit_playlist_name'
+            value="{{playlist.name}}">
         <br>
         <br>
-        <textarea class='description-text' name="edit_playlist_description">{{playlist.description}}</textarea>
+        <textarea class='description-text'
+            name="edit_playlist_description"
+            value="{{playlist.description}}"></textarea>
         <br>
         <a href="{{url_for('showSongs', playlist_id = playlist.id)}}">
             Cancel
