--- a/templates/OLD/publicplaylists.html
+++ b/templates/OLD/publicplaylists.html
@@ -20,8 +20,8 @@
 
     </div>
 
-<div id='test'><p>HERE</p></div>
-    {% for playlist in playlists %}
+
+    <!-- {% for playlist in playlists %}
     <div class='container'>
         <div class='top-playlist'>
             <h2>
@@ -38,7 +38,7 @@
 
         </div>
         <hr>
-    </div>
+    </div> -->
 
 </div>
 
