--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
             async defer>
         </script>
         <script src="//apis.google.com/js/platform.js?onload=start"></script>
+        <script type="text/javascript" src="{{url_for('static', filename='js/test.js')}}"></script>
 
 
     </head>
