--- a/templates/base.html
+++ b/templates/base.html
@@ -19,18 +19,23 @@
            crossorigin="anonymous">
 
         <link type='text/css' rel="stylesheet" href="/static/styles/main.css">
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+        </script>
         <script
             src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous">
         </script>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
-        </script>
+
         <script src="https://apis.google.com/js/client:platform.js?onload=start"
             async defer>
         </script>
+
         <script src="//apis.google.com/js/platform.js?onload=start"></script>
-        <script type="text/javascript" src="{{url_for('static', filename='js/test.js')}}"></script>
+        <script type=text/javascript src="{{ url_for('static', filename='js/test.js') }}"></script>
+
+
 
 
     </head>
