--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -19,27 +19,39 @@
         <h1>Playlists</h1>
 
     </div>
+    <br>
+    <br>
 
     <div id="playlist-tiles"></div>
 
     {% for playlist in playlists %}
-    <div class='container col-md-4'>
+    <div class='container col-md-3 playlist-tile'>
+        <a class="playlist-title" href="{{url_for('showSongs', playlist_id = playlist.id)}}">
         <div class='top-playlist'>
-            <h2>
-                <a href="{{url_for('showSongs', playlist_id = playlist.id)}}">
+            <h2 class='text-center'>
+
                     {{playlist.name}}
-                </a>
+
             </h2>
-            <h4>By {{playlist.user.name}}</h4>
+            <h4 class='text-center'>By {{playlist.user.name}}</h4>
+            <hr>
 
-            <div class='playlist-description'>
-                <h3 class='playlist-description'>Description: </h3>
+
+            <div class=''>
+                <h4 class='playlist-description'>Description: </h4>
                 <p class='playlist-description'>{{playlist.description}}</p>
+                <br>
+                {% if playlist.time_updated %}
+                <h5 class='playlist-time'> Last Modified: {{playlist.time_updated}}</h5>
+                {% else %}
+                <h5 class='playlist-time'>Created On: {{ playlist.time_created }}</h5>
+                {% endif %}
             </div>
-
         </div>
-        <hr>
+        <br>
+        </a>
     </div>
+
     {% endfor %}
 </div>
 
