--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -16,24 +16,29 @@
     <br>
     <div class='text-center'>
         <h1>Playlists</h1>
-        <a class='black' href = "{{url_for('newPlaylist')}}">Create New Playlist</a>
+        <div class='create-playlist'>
+            <a href = "{{url_for('newPlaylist')}}">
+                <button type="button" class="btn btn-default create-playlist-btn">Create New Playlist
+                </button>
+            </a>
+        </div>
     </div>
-
+    <br>
     {% for playlist in playlists %}
     <a class="playlist-title" href="{{url_for('showSongs', playlist_id = playlist.id)}}">
     <div class='container col-md-3 playlist-tile'>
 
-        <div class='top-playlist'>
-            <h2 class='text-center'>
+        <div class='top-playlist '>
+            <h2 class='text-center playlist-tile-text'>
 
                     {{playlist.name}}
 
             </h2>
-            <h4 class='text-center'>By {{playlist.user.name}}</h4>
+            <h4 class='text-center playlist-tile-text'>By {{playlist.user.name}}</h4>
             <hr>
 
 
-            <div class=''>
+            <div class='playlist-tile-text'>
                 <h4 class='playlist-description'>Description: </h4>
                 <p class='playlist-description'>{{playlist.description}}</p>
                 <br>
