--- a/templates/songs.html
+++ b/templates/songs.html
@@ -11,7 +11,10 @@
 				</figure>
 			</h3>
             <a href="{{url_for('newSong', playlist_id = playlist.id)}}">
-                Add new song
+				<button type="button" class="btn btn-default create-playlist-btn">
+					Add new song
+                </button>
+
             </a>
 		</div>
 	</div>
@@ -54,7 +57,7 @@
 					   </a>
 					   <p>By: {{song.artist}}</p>
 					   {% if song.genre %}
-					   <p>Gere: {{song.genre}}</p>
+					   <p>Genre: {{song.genre}}</p>
 					   {% endif %}
 					   {% if song.rendition %}
 						   <p>Rendition of: {{song.rendition}}</p>
