refactor: Changed styling of songs and centered h1s

--- a/templates/editsong.html
+++ b/templates/editsong.html
@@ -26,7 +26,7 @@
             value="{{song.artist}}">
         <br>
         <input type='text' class='input-song' name='edit_genre'
-            value="{{song.genre}}">
+            value="{{song.genre}}" placeholder='Genre'>
         <br>
         {% if song.youtube %}
         <input type='text' class='input-song' name='edit_youtube'
