refactor: Changed styling for songs page, need media css

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -184,8 +184,8 @@ ul{
 
 /*  songs   */
 .songs{
-    display:block;
-    height: 29vh;
+    /*height: 29vh;*/
+    display: inline;
 
 }
 .youtube-iframe-playlist{
