--- a/templates/publicsongs.html
+++ b/templates/publicsongs.html
@@ -15,6 +15,8 @@
 
 
 
+
+
 	<div class='col-md-offset-4 col-md-4 text-center'>
 	{% with messages = get_flashed_messages() %}
 	    {% if messages %}
@@ -27,6 +29,12 @@
 	{% endwith %}
 	</div>
 
+	<div class='col-md-4 col-md-offset-4'>
+		<iframe class='thing'
+		src="https://www.youtube.com/embed/VIDEO_ID?playlist={{songList}}"
+			frameborder="0" allowfullscreen>
+		</iframe>
+	</div>
 	<br>
 
     <br>
