--- a/templates/songs.html
+++ b/templates/songs.html
@@ -63,7 +63,7 @@
 					   <p>By: {{song.artist}}</p>
 
 					   {% if song.genre %}
-					   <p>Gere: {{song.genre}}</p>
+					   <p>Genre: {{song.genre}}</p>
 					   {% endif %}
 					   {% if song.rendition %}
 						   <p>Rendition of: {{song.rendition}}</p>
