--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -173,6 +173,7 @@ ul{
     margin-right: auto;
 }
 
+
 .inline{
     display:inline;
 }
@@ -196,6 +197,20 @@ ul{
     padding-bottom: 2vh;
     margin-left: auto;
     margin-right: auto;
+}
+
+.post-youtube{
+    background-color: black;
+}
+
+.iframe-youtube{
+    display: block;
+    width: 60vw;
+    height: 72vh;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+    /*margin-left: auto;
+    margin-right: auto;*/
 }
 
 .song-title{
