--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
         <script src="https://apis.google.com/js/client:platform.js?onload=start"
             async defer>
         </script>
-
+        <script src="{{url_for('static', filename='js/test.js')}}"></script>
         <script src="//apis.google.com/js/platform.js?onload=start"></script>
 
 
