--- a/templates/publicsongs.html
+++ b/templates/publicsongs.html
@@ -28,58 +28,18 @@
 	    {% endif %}
 	{% endwith %}
 	</div>
-	<div class="test"></div>
+
+
+
 	<div class='col-md-12 post-youtube'>
 		<div id="player" class="col-md-6 youtube-div">
 			<!-- <iframe id='youtube-iframe' class="iframe-youtube"
-			src="https://www.youtube.com/embed/?iv_load_policy=3&controls=2&playlist={{ songList }}"
+			src="https://www.youtube.com/embed/?autoplay=1&iv_load_policy=3&controls=2&playlist={{ songList }}"
 				frameborder="0" allowfullscreen>
 			</iframe> -->
 		</div>
 
 
-    <script>
-      // 2. This code loads the IFrame Player API code asynchronously.
-      var tag = document.createElement('script');
-
-      tag.src = "https://www.youtube.com/iframe_api";
-      var firstScriptTag = document.getElementsByTagName('script')[0];
-      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-      // 3. This function creates an <iframe> (and YouTube player)
-      //    after the API code downloads.
-      var player;
-      function onYouTubeIframeAPIReady() {
-        player = new YT.Player('player', {
-          height: '390',
-          width: '640',
-          videoId: 'M7lc1UVf-VE',
-          events: {
-            'onReady': onPlayerReady,
-            'onStateChange': onPlayerStateChange
-          }
-        });
-      }
-
-      // 4. The API will call this function when the video player is ready.
-      function onPlayerReady(event) {
-        event.target.playVideo();
-      }
-
-      // 5. The API calls this function when the player's state changes.
-      //    The function indicates that when playing a video (state=1),
-      //    the player should play for six seconds and then stop.
-      var done = false;
-      function onPlayerStateChange(event) {
-        if (event.data == YT.PlayerState.PLAYING && !done) {
-          setTimeout(stopVideo, 6000);
-          done = true;
-        }
-      }
-      function stopVideo() {
-        player.stopVideo();
-      }
-    </script>
 
 		<div class='col-md-4 col-md-offset-2 text-left'>
 			<ol>
@@ -181,4 +141,58 @@
 
 </div>
 
+<script>
+	var tag = document.createElement('script');
+
+	var thing = "{{songList}}"
+	var test = thing.split(",");
+
+
+	tag.src = "https://www.youtube.com/iframe_api";
+	var firstScriptTag = document.getElementsByTagName('script')[0];
+	firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+	// 3. This function creates an <iframe> (and YouTube player)
+	//    after the API code downloads.
+	var player;
+	function onYouTubeIframeAPIReady() {
+	  player = new YT.Player('player', {
+		  playerVars: {
+			  controls: 2,
+			  iv_load_policy: 3,
+			  rel: 0,
+			  playsinline: 1
+		  },
+		  loadPlaylist:{
+			  listType: 'playlist',
+			  list: test,
+			  index: parseInt(0),
+			  suggestedQuality: 'large'
+		  },
+		  events: {
+			  'onReady': onPlayerReady
+		  }
+	  })
+
+
+	}
+
+	//   4. The API will call this function when the video player is ready.
+	function onPlayerReady(event) {
+	  event.target.loadPlaylist(test)
+	}
+
+	// 5. The API calls this function when the player's state changes.
+	//    The function indicates that when playing a video (state=1),
+	//    the player should play for six seconds and then stop.
+	//   var done = false;
+	//   function onPlayerStateChange(event) {
+	//     if (event.data == YT.PlayerState.PLAYING && !done) {
+	//       setTimeout(stopVideo, 6000);
+	//       done = true;
+	//     }
+	//   }
+	function stopVideo() {
+	  player.stopVideo();
+	}
+</script>
 {% endblock %}
