refactor: Change edit playlist for textarea

--- a/templates/editplaylist.html
+++ b/templates/editplaylist.html
@@ -21,8 +21,7 @@
         <br>
         <br>
         <textarea class='description-text'
-            name="edit_playlist_description"
-            value="{{playlist.description}}"></textarea>
+            name="edit_playlist_description">{{playlist.description}}</textarea>
         <br>
         <a href="{{url_for('showSongs', playlist_id = playlist.id)}}">
             Cancel
